# ESP32

./: .gitignore  README.md
HX711_IDF/: CMakeLists.txt  sdkconfig.old
HX711_IDF/main/: CMakeLists.txt  HX711.c  main.c
as5600_driver/: CMakeLists.txt  sdkconfig
as5600_driver/components/as5600_dev/: as5600_dev.c  as5600_dev.h
as5600_driver/driver_user/as5600_app/: as5600_app.c  as5600_app.h
as5600_iic_bus/: README.md
as5600_iic_bus/components/as5600_dev/: as5600_dev.c  as5600_dev.h
as5600_iic_bus/driver_user/as5600_app/: as5600_app.c  as5600_app.h
as5600_iic_bus/main/: main.c
encoder_weight/: CMakeLists.txt  sdkconfig
encoder_weight/main/: main.c
i2c_simple/: README.md  sdkconfig
i2c_simple/main/: i2c_simple_main.c
laser_work/app_user/algorithm_app/: algorithm_app.c
laser_work/app_user/as5600_app/: as5600_app.c  as5600_app.h
weight_sensor_uart/components/sleep_user/: CMakeLists.txt  sensor_app.c  sensor_app.h
weight_sensor_uart/driver_user/uart_dev/: CMakeLists.txt  uart_dev.c  uart_dev.h
weight_sensor_uart/main/: main.c
